@@ -1,6 +1,10 @@
 1.2.1 2007-09-10
 ================
 
+ * Make subject field read-only and invisible for events.  This fixes
+   http://dev.plone.org/plone/ticket/6967
+   [alecm]
+
  * Use widget views for standard view templates to simpify inline editing.
    [limi]
 
